--- a/html/generar.html
+++ b/html/generar.html
@@ -15,12 +15,12 @@
         <main>
             <form id="form-generate" class="form card">
                 <div class="form-item">
-                    <label for="mes">Seleccione el mes a generar</label>
-                    <select class="form-select" name="mes" id="mes"></select>    
+                    <p class="form-text">Seleccione el año</p>
+                    <button type="button" class="form-btn">generar</button>
                 </div>
                 <div class="form-item">
-                    <label for="year">Seleccione el año a generar</label>
-                    <select class="form-select" name="year" id="year"></select>
+                    <p class="form-text">Seleccione el mes a generar</p>
+                    <button type="button" class="form-btn">generar</button>    
                 </div>
                 <div class="btn-container">
                     <button id="submit-btn" class="submit-btn" type="submit">Generar</button>
