--- a/html/ingresar.html
+++ b/html/ingresar.html
@@ -43,9 +43,9 @@
                 </div>
                 <!-- Grupo Tipo contratacion -->
                 <div class="formulario__grupo" id="grupo__contratacion">
-                    <label class="formulario__label" for="tipo_contratacion">Seleccione el tipo de contratacion</label>
+                    <label class="formulario__label" for="contratacion">Seleccione el tipo de contratacion</label>
                     <div class="formulario__grupo-input">
-                        <select class="formulario__input" name="tipo_contratacion" id="contratacion"></select>
+                        <select class="formulario__input" name="contratacion" id="contratacion"></select>
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
                     </div>
                     <p class="formulario__input-error">Seleccione un tipo de contratacion!</p>
@@ -54,7 +54,7 @@
                 <div class="formulario__grupo" id="grupo__liquidacion">
                     <label class="formulario__label" for="tipo_liquidacion">Seleccione el tipo de liquidacion</label>
                     <div class="formulario__grupo-input">
-                        <select class="formulario__input" name="tipo_liquidacion" id="liquidacion"></select>
+                        <select class="formulario__input" name="liquidacion" id="liquidacion"></select>
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
                     </div>
                     <p class="formulario__input-error">Seleccione un tipo de liquidacion!</p>
@@ -63,34 +63,34 @@
                 <div class="formulario__grupo" id="grupo__diasTrabajo">
                     <label class="formulario__label" for="dias_trabajados">Ingrese los dias trabajados</label>
                     <div class="formulario__grupo-input">
-                        <input class="formulario__input" type="number" name="dias_trabajados" id="dias" placeholder="Dias trabajados">
+                        <input class="formulario__input" type="tel" name="dias_t" id="dias" placeholder="Dias trabajados">
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
                     </div>
                     <p class="formulario__input-error">Ingrese un numero valido de dias trabajados!</p>
                 </div>
                 <!-- Grupo Cargo -->
                 <div class="formulario__grupo" id="grupo__cargo">
-                    <label class="formulario__label" for="cargo_funcion">Seleccione un cargo</label>
+                    <label class="formulario__label" for="cargo">Seleccione un cargo</label>
                     <div class="formulario__grupo-input">
-                        <select class="formulario__input" name="cargo_funcion" id="cargo"></select>
+                        <select class="formulario__input" name="cargo" id="cargo"></select>
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
                     </div>
                     <p class="formulario__input-error">Seleccione un cargo o funcion!</p>
                 </div>
                 <!-- Grupo Clase -->
                 <div class="formulario__grupo" id="grupo__clase">
-                    <label class="formulario__label" for="clase_nivel">Seleccione una clase</label>
+                    <label class="formulario__label" for="clase">Seleccione una clase</label>
                     <div class="formulario__grupo-input">
-                        <select class="formulario__input" name="clase_nivel" id="clase"></select>
+                        <select class="formulario__input" name="clase" id="clase"></select>
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
                     </div>
                     <p class="formulario__input-error">Seleccione una clase!</p>
                 </div>
                 <!-- Grupo Categoria -->
                 <div class="formulario__grupo" id="grupo__categoria">
-                    <label class="formulario__label" for="categoria_agrupacion">Seleccione una categoria</label>
+                    <label class="formulario__label" for="categoria">Seleccione una categoria</label>
                     <div class="formulario__grupo-input">
-                        <select class="formulario__input" name="categoria_agrupacion" id="categoria"></select>
+                        <select class="formulario__input" name="categoria" id="categoria"></select>
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
                     </div>
                     <p class="formulario__input-error">Seleccione una categoria!</p>
