inicio depuracion infreso datos

--- a/html/consultar.html
+++ b/html/consultar.html
@@ -26,10 +26,8 @@
                 </form>
             </section>
             <section class="section-2 card">
-                <div class="info-container" id="info-card1">
-                </div>
-                <div class="info-container" id="info-card2">
-                </div>
+                <div class="info-container" id="info-card1"></div>
+                <div class="info-container" id="info-card2"></div>
             </section>
             <section class="card section-3" id="info-card3">
                 <button type="button" class="generate-consult-btn" id="generate-consult-btn" disabled>Generar consulta</button>
