--- a/html/ingresar.html
+++ b/html/ingresar.html
@@ -25,7 +25,7 @@
                 </div>
                 <!-- Grupo Nombre -->
                 <div class="formulario__grupo" id="grupo__nombre">
-                    <label class="formulario__label" for="nombre">Ingrese el nombre del empleado</label>
+                    <label class="formulario__label" for="nombre">Ingrese el nombre</label>
                     <div class="formulario__grupo-input">
                         <input class="formulario__input" type="text" name="nombre" id="nombre" placeholder="Nombre">
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
@@ -34,7 +34,7 @@
                 </div>
                 <!-- Grupo Apellido -->
                 <div class="formulario__grupo" id="grupo__apellido">
-                    <label class="formulario__label" for="apellido">Ingrese el apellido del empleado</label>
+                    <label class="formulario__label" for="apellido">Ingrese el apellido</label>
                     <div class="formulario__grupo-input">
                         <input class="formulario__input" type="text" name="apellido" id="apellido" placeholder="Apellido">
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
@@ -43,7 +43,7 @@
                 </div>
                 <!-- Grupo Tipo contratacion -->
                 <div class="formulario__grupo" id="grupo__contratacion">
-                    <label class="formulario__label" for="contratacion">Seleccione el tipo de contratacion</label>
+                    <label class="formulario__label" for="contratacion">Tipo de contratacion</label>
                     <div class="formulario__grupo-input">
                         <select class="formulario__input" name="contratacion" id="contratacion"></select>
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
@@ -52,7 +52,7 @@
                 </div>
                 <!-- Grupo Liquidacion -->
                 <div class="formulario__grupo" id="grupo__liquidacion">
-                    <label class="formulario__label" for="tipo_liquidacion">Seleccione el tipo de liquidacion</label>
+                    <label class="formulario__label" for="tipo_liquidacion">Tipo de liquidacion</label>
                     <div class="formulario__grupo-input">
                         <select class="formulario__input" name="liquidacion" id="liquidacion"></select>
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
@@ -61,7 +61,7 @@
                 </div>
                 <!-- Grupo Dias Trabajados -->
                 <div class="formulario__grupo" id="grupo__diasTrabajo">
-                    <label class="formulario__label" for="dias_trabajados">Ingrese los dias trabajados</label>
+                    <label class="formulario__label" for="dias_trabajados">Dias trabajados</label>
                     <div class="formulario__grupo-input">
                         <input class="formulario__input" type="tel" name="dias_t" id="dias" placeholder="Dias trabajados">
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
@@ -97,39 +97,39 @@
                 </div>
                 <!-- Grupo total remunerativo -->
                 <div class="formulario__grupo" id="grupo__remunerativo">
-                    <label class="formulario__label" for="total_remunerativo">Ingrese el total remunerativo</label>
+                    <label class="formulario__label" for="total_remunerativo">Total remunerativo</label>
                     <div class="formulario__grupo-input">
-                        <input class="formulario__input" type="number" name="total_remunerativo" id="remuneracion" placeholder="Total remunerativo">
+                        <input class="formulario__input" type="tel" name="total_remunerativo" id="remuneracion" placeholder="Total remunerativo">
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
                     </div>
                     <p class="formulario__input-error">Ingrese un total remunerativo valido!</p>
                 </div>
                 <div class="formulario__grupo" id="grupo__noRemunerativo">
-                    <label class="formulario__label" for="total_no_remunerativo">Ingrese el total no remunerativo</label>
+                    <label class="formulario__label" for="total_no_remunerativo">Total no remunerativo</label>
                     <div class="formulario__grupo-input">
-                        <input class="formulario__input" type="number" name="total_no_remunerativo" id="no_remunerativo" placeholder="Total no remunerativo">
+                        <input class="formulario__input" type="tel" name="total_no_remunerativo" id="no_remunerativo" placeholder="Total no remunerativo">
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
                     </div>
                     <p class="formulario__input-error">Ingrese un total no remunerativo valido!</p>
                 </div>
                 <div class="formulario__grupo" id="grupo__aporteadd">
-                    <label class="formulario__label" for="tipo_aporte_adicional">Seleccione el tipo de aporte adicional</label>
+                    <label class="formulario__label" for="tipo_aporte_adicional">Tipo de aporte adicional</label>
                     <div class="formulario__grupo-input">
                         <select class="formulario__input" name="tipo_aporte_adicional" id="aporte_adicional"></select>
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
                     </div>
-                    <p class="formulario__input-error">El tipo de aporte adicional solo debe de contener '$-' como contenido!</p>
+                    <p class="formulario__input-error">El tipo de aporte adicional solo debe de contener '$-'</p>
                 </div>
                 <div class="formulario__grupo" id="grupo__montoaporte">
-                    <label class="formulario__label" for="monto_aporte_adicional">Seleccione el monto del aporte adicional</label>
+                    <label class="formulario__label" for="monto_aporte_adicional">Monto del aporte adicional</label>
                     <div class="formulario__grupo-input">
                         <select  class="formulario__input" name="monto_aporte_adicional" id="monto_aporte"></select>
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
                     </div>
-                    <p class="formulario__input-error">El monto de aporte adicional solo debe de contener '$-' como contenido!</p>
+                    <p class="formulario__input-error">El monto de aporte adicional solo debe de contener '$-'</p>
                 </div>
                 <div class="formulario__grupo" id="grupo__tipoLicencia">
-                    <label class="formulario__label" for="tipo_licencia">Seleccione un tipo de licencia</label>
+                    <label class="formulario__label" for="tipo_licencia">Tipo de licencia</label>
                     <div class="formulario__grupo-input">
                         <select class="formulario__input" name="tipo_licencia" id="licencia"></select>
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
@@ -137,7 +137,7 @@
                     <p class="formulario__input-error">Seleccione un tipo de licencia valida !</p>
                 </div>
                 <div class="formulario__grupo" id="grupo__diasLicencia">
-                    <label class="formulario__label" for="dias_licencia">Ingrese los dias de licencia</label>
+                    <label class="formulario__label" for="dias_licencia">Dias de licencia</label>
                     <div class="formulario__grupo-input">
                         <input class="formulario__input" type="number" name="dias_licencia" id="dias_licencia" placeholder="Dias de licencia">
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
@@ -154,15 +154,15 @@
                         <p class="formulario__input-error">Seleccione un mes!</p>
                     </div>
                     <div class="formulario__grupo" id="grupo__year">
-                        <label class="formulario__label" for="">Ingrese el año</label>
+                        <label class="formulario__label" for="year">Ingrese el año</label>
                         <div class="formulario__grupo-input">
-                            <input class="formulario__input" name="year" id="year" placeholder="año">
+                            <input class="formulario__input" name="year" type="tel" id="year" placeholder="año">
                             <i class="formulario__validacion-estado fas fa-times-circle"></i>
                         </div>
                         <p class="formulario__input-error">Ingrese el año en un formato valido!</p>
                     </div>
                 </div>
-                    <button class="submit-btn" id="submit-btn" type="submit">Cargar datos</button>
+                <button class="submit-btn" id="submit-btn" type="submit">Cargar datos</button>
             </form>
         </main>
         <aside class="card">
