--- a/html/ingresar.html
+++ b/html/ingresar.html
@@ -8,7 +8,7 @@
     <title>Ingresar datos</title>
 </head>
 <body>
-    <div class="container">
+    <div id="container" class="container">
         <header class="card">
             <p>hola</p>
         </header>
@@ -104,6 +104,7 @@
                     </div>
                     <p class="formulario__input-error">Ingrese un total remunerativo valido!</p>
                 </div>
+                <!-- Grupo Total no Remunerativo -->
                 <div class="formulario__grupo" id="grupo__noRemunerativo">
                     <label class="formulario__label" for="total_no_remunerativo">Total no remunerativo</label>
                     <div class="formulario__grupo-input">
