--- a/html/ingresar.html
+++ b/html/ingresar.html
@@ -122,9 +122,9 @@
                     <p class="formulario__input-error">El tipo de aporte adicional solo debe de contener '$-'</p>
                 </div>
                 <div class="formulario__grupo" id="grupo__monto_aporte_adicional">
-                    <label class="formulario__label" for="monto_aporte_adicional">Monto del aporte adicional</label>
+                    <label class="formulario__label" for="monto_aporte_adicional">Monto aporte adicional</label>
                     <div class="formulario__grupo-input">
-                        <select  class="formulario__input" name="monto_aporte_adicional" id="monto_aporte"></select>
+                        <select  class="formulario__input" name="monto_aporte_adicional" id="monto_aporte_adicional"></select>
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
                     </div>
                     <p class="formulario__input-error">El monto de aporte adicional solo debe de contener '$-'</p>
@@ -168,7 +168,7 @@
                 </div>
                 <div class="formulario__grupo formulario__grupo-btn-enviar">
                     <button class="next-btn" id="next-btn" type="submit">Siguente</button>
-                    <button id="btn-submit" type="submit" class="formulario__btn" disabled>Enviar</button>
+                    <button id="btn-submit" type="submit" class="formulario__btn" >Enviar</button>
                     <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente!</p>
                 </div>
                 
