inicio depuracion inserts multiples

--- a/html/ingresar.html
+++ b/html/ingresar.html
@@ -167,7 +167,7 @@
                     <p><i class="fas fa-exclamation-triangle"></i> <b>Error:</b> Por favor rellena el formulario correctamente. </p>
                 </div>
                 <div class="formulario__grupo formulario__grupo-btn-enviar">
-                    <button class="next-btn" id="next-btn" type="submit">Siguente</button>
+                    <button class="next-btn" id="next-btn" type="button">Siguente</button>
                     <button id="btn-submit" type="submit" class="formulario__btn" >Enviar</button>
                     <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente!</p>
                 </div>
