--- a/html/ingresar.html
+++ b/html/ingresar.html
@@ -13,7 +13,7 @@
             <p>hola</p>
         </header>
         <main class="card">
-            <form class="card form" id="form">
+            <form class="card form" id="form" autocomplete="off">
                 <!-- Grupo Cuil -->
                 <div class="formulario__grupo" id="grupo__cuil">
                     <label class="formulario__label" for="cuil">Ingrese el Cuil del empleado</label>
