--- a/html/ingresar.html
+++ b/html/ingresar.html
@@ -99,7 +99,7 @@
                 <div class="formulario__grupo" id="grupo__total_remunerativo">
                     <label class="formulario__label" for="total_remunerativo">Total remunerativo</label>
                     <div class="formulario__grupo-input">
-                        <input class="formulario__input" type="tel" name="total_remunerativo" id="remuneracion" placeholder="Total remunerativo">
+                        <input class="formulario__input" type="text" name="total_remunerativo" id="remuneracion" placeholder="Total remunerativo">
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
                     </div>
                     <p class="formulario__input-error">Ingrese un total remunerativo valido!</p>
@@ -108,7 +108,7 @@
                 <div class="formulario__grupo" id="grupo__total_no_remunerativo">
                     <label class="formulario__label" for="total_no_remunerativo">Total no remunerativo</label>
                     <div class="formulario__grupo-input">
-                        <input class="formulario__input" type="tel" name="total_no_remunerativo" id="no_remunerativo" placeholder="Total no remunerativo">
+                        <input class="formulario__input" type="text" name="total_no_remunerativo" id="no_remunerativo" placeholder="Total no remunerativo">
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
                     </div>
                     <p class="formulario__input-error">Ingrese un total no remunerativo valido!</p>
