--- a/html/ingresar.html
+++ b/html/ingresar.html
@@ -72,7 +72,7 @@
                 <div class="formulario__grupo" id="grupo__cargo">
                     <label class="formulario__label" for="cargo">Seleccione un cargo</label>
                     <div class="formulario__grupo-input">
-                        <select class="formulario__input" name="cargo" id="cargo"></select>
+                        <input class="formulario__input" name="cargo" type="text" id="cargo" placeholder="Ingrese Cargo">
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
                     </div>
                     <p class="formulario__input-error">Seleccione un cargo o funcion!</p>
@@ -81,7 +81,7 @@
                 <div class="formulario__grupo" id="grupo__clase">
                     <label class="formulario__label" for="clase">Seleccione una clase</label>
                     <div class="formulario__grupo-input">
-                        <select class="formulario__input" name="clase" id="clase"></select>
+                        <input class="formulario__input" name="clase" type="text" id="clase" placeholder="Ingrese Clase">
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
                     </div>
                     <p class="formulario__input-error">Seleccione una clase!</p>
@@ -90,7 +90,7 @@
                 <div class="formulario__grupo" id="grupo__categoria">
                     <label class="formulario__label" for="categoria">Seleccione una categoria</label>
                     <div class="formulario__grupo-input">
-                        <select class="formulario__input" name="categoria" id="categoria"></select>
+                        <input class="formulario__input" type="text" name="categoria" id="categoria" placeholder="Ingrese Categoria">
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
                     </div>
                     <p class="formulario__input-error">Seleccione una categoria!</p>
