inicio de creacion del componente de importacion

--- a/index.html
+++ b/index.html
@@ -23,25 +23,29 @@
           <p class="consult-text">Consultar Datos</p>
           <img class="consult-img" src="./assets/search-window-svgrepo-com.svg" alt="">
         </button>
-        <button class="switch-mode" type="button">
-          <input id="switch" type="checkbox" name="switch">
-          <div class="app">
-            <nav>
-              <time class="time">4:20 AM</time>
-              <div class="icons">
-                <span class="network"></span>
-                <span class="battery"></span>
-              </div>
-            </nav>
-            <div class="circle"></div>
-            <label class="toggle-label" id="dark" for="switch"></label>
-          </div>
-        </button>
-        <button id="generate-btn" class="generate card boton">
-          <p class="generate-text">Generar Archivos</p>
-          <img class="generate-img" src="./assets/download-window-svgrepo-com.svg" alt="">
-        </btton>
       </main>
+      <button id="generate-btn" class="generate card boton">
+        <p class="generate-text">Generar Archivos</p>
+        <img class="generate-img" src="./assets/download-window-svgrepo-com.svg" alt="">
+      </button>
+      <button id="import-btn" class="import card boton">
+        <p class="generate-text">Importar Archivos</p>
+        <img class="generate-img" src="./assets/typo yukari A2.png" alt="">
+      </button>
+      <button class="switch-mode" type="button">
+        <input id="switch" type="checkbox" name="switch">
+        <div class="app">
+          <nav>
+            <time class="time">4:20 AM</time>
+            <div class="icons">
+              <span class="network"></span>
+              <span class="battery"></span>
+            </div>
+          </nav>
+          <div class="circle"></div>
+          <label class="toggle-label" id="dark" for="switch"></label>
+        </div>
+      </button>
       <aside class="aside-content card">
         <p class="aside-text">Datos Cargados</p>
         <img class="aside-img" src="/assets/derrick-with-load-svgrepo-com.svg" alt="">
