--- a/html/importarExcel.html
+++ b/html/importarExcel.html
@@ -16,11 +16,10 @@
             <h1>header</h1>
         </header>
         <main class="card">
-            <label for="import-btn">Seleccione el archivo a cargar</label>
-            <button id="import-btn" class="import-btn" name="import-btn" type="button">
-                <p class="import-text">Seleccionar Archivo</p>
+            <label class="import-btn" for="import-btn">
                 <input class="import-input" type="file" name="import-input" id="import-input">
-            </button>
+                <p class="import-text">Seleccionar archivo</p>
+            </label>
         </main>
         <aside class="card">
             <p>aside</p>
