--- a/html/importarExcel.html
+++ b/html/importarExcel.html
@@ -16,10 +16,11 @@
             <h1>header</h1>
         </header>
         <main class="card">
-            <label class="import-btn" for="import-btn">
-                <input class="import-input" type="file" name="import-input" id="import-input">
-                <p class="import-text">Seleccionar archivo</p>
-            </label>
+            <input type="file" id="file-input" name="file-input" accept=".xlsx">
+            <label id="input-file-label" class="input-file-label" for="file-input">Seleccionar Archivo</label>
+            <section id="upload-container" class="upload-container">
+                
+            </section>
         </main>
         <aside class="card">
             <p>aside</p>
