fin de depuracion de errores de importacion e inicio de creacion del flujo grafico para el usuario

--- a/html/importarExcel.html
+++ b/html/importarExcel.html
@@ -18,8 +18,9 @@
         <main class="card">
             <input type="file" id="file-input" name="file-input" accept=".xlsx">
             <label id="input-file-label" class="input-file-label" for="file-input">Seleccionar Archivo</label>
-            <section id="upload-container" class="upload-container">
-                
+            <section id="upload-container" class="upload-container"></section>
+            <section id="error-layout" class="error-layout">
+                <p>hola</p>
             </section>
         </main>
         <aside class="card">
