--- a/html/importarExcel.html
+++ b/html/importarExcel.html
@@ -15,13 +15,15 @@
         <header class="card">
             <h1>header</h1>
         </header>
-        <main class="card">
-            <input type="file" id="file-input" name="file-input" accept=".xlsx">
-            <label id="input-file-label" class="input-file-label" for="file-input">Seleccionar Archivo</label>
-            <section id="upload-container" class="upload-container"></section>
-            <section id="error-layout" class="error-layout">
-                <p>hola</p>
-            </section>
+        <main class="card import-container">
+            <div id="input-container" class="input-container">
+                <input type="file" id="file-input" name="file-input" accept=".xlsx">
+                <label id="input-file-label" class="input-file-label" for="file-input">Seleccionar Archivo</label>
+                <section id="upload-container" class="upload-container"></section>
+            </div>
+            <div class="error-aside-container">
+                <section id="error-layout" class="error-layout"></section>
+            </div>
         </main>
         <aside class="card">
             <p>aside</p>
